# ChangeLog for dev-perl/SVG
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SVG/ChangeLog,v 1.39 2011/09/04 11:21:51 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -SVG-2.50.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> SVG-2.500.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*SVG-2.500.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +SVG-2.500.0.ebuild:
  Change version scheme

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -SVG-2.33.ebuild,
  -SVG-2.44.ebuild, -SVG-2.49.ebuild:
  Cleanup

  27 Jun 2010; <nixnut@gentoo.org> SVG-2.50.ebuild:
  ppc stable #323529

  21 Jun 2010; Raúl Porcel <armin76@gentoo.org> SVG-2.50.ebuild:
  alpha/ia64/sparc stable wrt #323529

  15 Jun 2010; Torsten Veller <tove@gentoo.org> SVG-2.50.ebuild:
  Stable on amd64 and x86 (#323529)

*SVG-2.50 (08 Apr 2010)

  08 Apr 2010; Torsten Veller <tove@gentoo.org> +SVG-2.50.ebuild:
  Version bump

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -SVG-2.32.ebuild,
  -SVG-2.47.ebuild, -SVG-2.48.ebuild:
  Cleanup

*SVG-2.49 (23 Jan 2009)

  23 Jan 2009; Torsten Veller <tove@gentoo.org> +SVG-2.49.ebuild:
  Version bump

*SVG-2.48 (13 Jan 2009)

  13 Jan 2009; Robin H. Johnson <robbat2@gentoo.org> +SVG-2.48.ebuild:
  Version bump via perl-bump experimental tool.

*SVG-2.47 (17 Dec 2008)

  17 Dec 2008; Torsten Veller <tove@gentoo.org> +SVG-2.47.ebuild:
  Version bump

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> SVG-2.44.ebuild:
  alpha/ia64/sparc/x86 stable

*SVG-2.44 (24 Apr 2008)

  24 Apr 2008; Yuval Yaari <yuval@gentoo.org> +SVG-2.44.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> SVG-2.33.ebuild:
  Stable on x86, bug #169152.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> -SVG-2.28.ebuild,
  SVG-2.32.ebuild, SVG-2.33.ebuild:
  Version bump, thanks seemant
