@@ -1,0 +1,24 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SVG/SVG-2.510.0.ebuild,v 1.1 2012/03/30 14:25:24 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=SZABGAB
+MODULE_VERSION=2.51
+inherit perl-module
+
+DESCRIPTION="Perl extension for generating Scalable Vector Graphics (SVG) documents"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	test? (
+		dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage
+	)"
+
+SRC_TEST=do
